add feature and improvement: - update go now use go 1.21 - update base packages to latest - remove message sync configuration limit - add feature for update or delete message - add feature to join or leave group
