# docs/swagger.json
@@ -62,9 +62,67 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Information"
+                    "WhatsApp Group"
                 ],
                 "summary": "Get Joined Groups Information",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Joining to Group From Invitation Link from WhatsApp",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WhatsApp Group"
+                ],
+                "summary": "Join Group From Invitation Link",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Group Invitation Link",
+                        "name": "link",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Leaving Group By Group ID from WhatsApp",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WhatsApp Group"
+                ],
+                "summary": "Leave Group By Group ID",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Group ID",
+                        "name": "gid",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK"
@@ -158,6 +216,93 @@
                 }
             }
         },
+        "/message": {
+            "post": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Update Message to Spesific WhatsApp Personal ID or Group ID",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WhatsApp Message"
+                ],
+                "summary": "Update Message",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Destination WhatsApp Personal ID or Group ID",
+                        "name": "msisdn",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Message ID",
+                        "name": "messageid",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Text Message",
+                        "name": "message",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            },
+            "delete": {
+                "security": [
+                    {
+                        "BearerAuth": []
+                    }
+                ],
+                "description": "Delete Message to Spesific WhatsApp Personal ID or Group ID",
+                "consumes": [
+                    "multipart/form-data"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "WhatsApp Message"
+                ],
+                "summary": "Delete Message",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Destination WhatsApp Personal ID or Group ID",
+                        "name": "msisdn",
+                        "in": "formData",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Message ID",
+                        "name": "messageid",
+                        "in": "formData",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    }
+                }
+            }
+        },
         "/registered": {
             "get": {
                 "security": [
@@ -204,7 +349,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Audio Message",
                 "parameters": [
@@ -245,7 +390,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Contact Message",
                 "parameters": [
@@ -293,7 +438,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Document Message",
                 "parameters": [
@@ -334,7 +479,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Image Message",
                 "parameters": [
@@ -389,7 +534,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Link Message",
                 "parameters": [
@@ -436,7 +581,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Location Message",
                 "parameters": [
@@ -484,7 +629,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Sticker Message",
                 "parameters": [
@@ -525,7 +670,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Text Message",
                 "parameters": [
@@ -566,7 +711,7 @@
                     "application/json"
                 ],
                 "tags": [
-                    "WhatsApp Message"
+                    "WhatsApp Send Message"
                 ],
                 "summary": "Send Video Message",
                 "parameters": [
